# hybrid-monitor-phoenix

./: README.md
backend/: alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260723_0001_create_identity_tables.py
backend/src/hybrid_monitor/: __init__.py  main.py
backend/src/hybrid_monitor/api/: __init__.py  dependencies.py  exceptions.py  middleware.py  responses.py
backend/src/hybrid_monitor/api/v1/: __init__.py  router.py
backend/src/hybrid_monitor/core/: database.py  logging.py  session.py  settings.py
backend/src/hybrid_monitor/db/: __init__.py  base.py  models.py
backend/src/hybrid_monitor/domain/: __init__.py
backend/src/hybrid_monitor/domain/identity/: __init__.py
backend/src/hybrid_monitor/domain/identity/models/: __init__.py  association.py  audit_log.py  permission.py  relationships.py  role.py  user.py
backend/src/hybrid_monitor/domain/organizations/: __init__.py
