[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "hybrid-monitor-phoenix"
version = "0.1.0"
description = "HYBRID Monitor Phoenix backend"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "pydantic-settings==2.10.1",
  "structlog==25.4.0",
  "sqlalchemy[asyncio]==2.0.43",
  "asyncpg==0.30.0",
  "alembic==1.16.4",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.4.1",
  "pytest-asyncio==1.1.0",
  "ruff==0.12.10",
  "mypy==1.17.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["hybrid_monitor"]
